add image upload endpoint; update openapi.yml; update pyproject.toml and uv.lock; update readme (#6)
